// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $500.43
  </h1>
</div>
`;

exports[`3 expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $12,500.43
  </h1>
</div>
`;
